--- a/fdcSearcherSite/index.html
+++ b/fdcSearcherSite/index.html
@@ -9,38 +9,38 @@
 </head>
 
 <body>
-	<div class="container">
-		<header class="header">
-			<nav id="nevigetionlinks" class="grid">
-				<a href="example.html" class="button-37">example.html</a>
-				<a href="index.html" class="button-37">Home</a>
-				<a href="search.html" class="button-37">Foods Search</a>
-				<a href="search_Component.html" class="button-37">Component Search</a>
-				<a href="search_advence.html" class="button-37">Advanced Food Search</a>
-			</nav>
-		</header>
-		<main class="container__main">
-			<!-- Left sidebar -->
-			<aside class="container__left">...</aside>
+<div class="grid">
+  <header>
+    <nav id="nevigetionlinks">
+      <a href="example.html" role="button" class="button-28">example.html</a>
+      <a href="index.html" role="button" class="button-28">Home</a>
+      <a href="search.html" role="button" class="button-28">Foods Search</a>
+      <a href="search_Component.html" role="button" class="button-28">Component Search</a>
+      <a href="search_advence.html" role="button" class="button-28">Advanced Food Search</a>
+    </nav>
+  </header>
 
-			<!-- Main content -->
-			<article class="container__middle">
-				<main>
-					Food Data Central searcher This site provide easy methods to do a foods search in fdc site. What is food data central: FoodData
-					Central is an integrated data system that provides expanded nutrient profile data and links to related agricultural
-					and experimental research.
-				</main>
-			</article>
+  <aside class="sidebar-left">
+    Left Sidebar
+  </aside>
 
-			<!-- Right sidebar -->
-			<nav class="container__right">...</nav>
-		</main>
-		<footer>
-			...
-		</footer>
-	</div>
+  <article>
+    <main>
+      Food Data Central searcher This site provide easy methods to do a foods search in fdc site. What is food data central: FoodData
+      Central is an integrated data system that provides expanded nutrient profile data and links to related agricultural
+      and experimental research.
+    </main>
+  </article>
 
-	<script type="module" src="script.js"></script>
+  <aside class="sidebar-right">
+    Right Sidebar
+  </aside>
+  
+  <footer>
+    Footer
+  </footer>
+</div>
+<script type="module" src="script.js"></script>
 </body>
 
 </html>
