--- a/public/index.html
+++ b/public/index.html
@@ -20,37 +20,23 @@
   </header>
 
   <aside class="sidebar-left">
-    
+   
   </aside>
 
   <article>
-      <form 
-      action='https://server.barelmishal.repl.co/search' id="form-component-search">
-        <input 
-          type="search" 
-          name="qConponent" 
-          list="nutrients" 
-          id="query-component" 
-          autocomplete="off"/>
-          <datalist id="nutrients"></datalist>
-          <input
-            id="submit-component-search"
-            type="submit" 
-            name="submit"
-            value="Component Search">    
-          </form>
-      <script 
-      type="module" 
-      src="componentScript.js">
-      </script>
+    <main>
+      Food Data Central searcher This site provide easy methods to do a foods search in fdc site. What is food data central: FoodData
+      Central is an integrated data system that provides expanded nutrient profile data and links to related agricultural
+      and experimental research.
+    </main>
   </article>
 
   <aside class="sidebar-right">
-    
+  
   </aside>
   
   <footer>
-    Footer
+    Barel copy reight
   </footer>
 </div>
 <script type="module" src="script.js"></script>
