--- a/public/search_advence.html
+++ b/public/search_advence.html
@@ -81,7 +81,7 @@
   </aside>
   
   <footer>
-    Footer
+    Barel copy reight
   </footer>
 </div>
 <script type="module" src="script.js"></script>
